fix: fix wrong color for selected nav item

--- a/src/main.scss
+++ b/src/main.scss
@@ -32,6 +32,8 @@
   //Override 3.9.15 Changes
   --sn-stylekit-grey-5: var(--highlight-color);
 
+  --navigation-item-selected-background-color: #16161c;
+
   --sn-stylekit-editor-background-color: var(--sn-stylekit-background-color);
   --sn-stylekit-editor-foreground-color: var(--sn-stylekit-foreground-color);
 
